--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "5.0.0",
     "react-table": "7.7.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "react-error-overlay": "^6.0.9",
     "typescript": "3.2.1"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
