--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.js",
   "dependencies": {
+    "@azure/storage-blob": "^12.9.0",
     "@emotion/react": "11.8.1",
     "@emotion/styled": "11.8.1",
     "@mui/material": "5.4.3",
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0"
   },
